--- a/addons/TOParmaInfo/news.html
+++ b/addons/TOParmaInfo/news.html
@@ -4,12 +4,10 @@
 <p>
 <font size="10">
 <br />
-	• Malden Coming Soon<br />
-	• Discord: Discord.frac.gg<br />
-	• Donate Now! Help keep the server running!<br />
+	• Discord: discord.gg/4qqWCm8ZQs<br />
 </font>
 <font size="13">
-<p><a href="https://forum.fractured-gaming.com/"> Click here for more info ...</a></p>
+<p><a href="discord.gg/4qqWCm8ZQs"> Click here for more info ...</a></p>
 </font>
 </body>
 </html>
