--- a/addons/TOParmaInfo/stats.html
+++ b/addons/TOParmaInfo/stats.html
@@ -4,13 +4,8 @@
 <p>
 <font size="10">
 <br />
-• We now show all time stats!<br />
-• View Your Stats On line!<br />
-• Click the Link Below to see your stats!<br />
+• Stats Leaderboard coming soon.
 	</font>
-<font size="13" align="left"><br />
-<a href="https://fractured-gaming.com/a3wasteland-stratis/">Click Here for Stats.</a><br />
-</font>
 </p>
 </body>
 </html>
