--- a/addons/TOParmaInfo/rules.html
+++ b/addons/TOParmaInfo/rules.html
@@ -10,7 +10,7 @@
 	<br />
 </font>
 <font size="13">
-<p><a href="https://forum.fractured-gaming.com/%23id%7D-rules-info/?id=25">Click here for the all the rules ...</a></p>
+<p><a href="discord.gg/4qqWCm8ZQs">Click here for the all the rules ...</a></p>
 </font>
 </body>
 </html>
